...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:id="@+id/loginLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">
...
                android:textColorHint="@color/black"
                android:textSize="25sp"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/loginButton"
            android:layout_width="300dp"
            android:layout_height="75dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/navy"
            android:padding="12dp"
            android:text="Log In"
...
