<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_feed"
        android:icon="@drawable/home_24px"
        android:title="Feed" />
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search"
        android:title="Search" />
    <item
        android:id="@+id/nav_add"
        android:icon="@drawable/add_circle_24px"
        android:title="Add Mood" />
    <item
        android:id="@+id/nav_maps"
        android:icon="@drawable/explore_24px"
        android:title="maps" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/person_24px"
        android:title="Profile" />
</menu>